--- a/src/components/Soilder/Soilder.css
+++ b/src/components/Soilder/Soilder.css
@@ -1,11 +1,23 @@
 .soilder {
-  background-color: cornflowerblue;
-  border: 20px solid black;
+  background-color: rgb(194, 234, 247);
   border-radius: 20px;
   justify-content: center;
 }
-
+.soilder h4 {
+  margin-left: 40px;
+}
+.soilder button {
+  margin-left: 110px;
+  margin-bottom: 30px;
+  height: 40px;
+  width: 200px;
+  border-radius: 10px;
+  font-size: 20px;
+}
 .soilder img {
   height: 400px;
-  width: 300px;
+  width: 400px;
+  margin-left: 15px;
+  margin-top: 15px;
+  border-radius: 20px;
 }
