--- a/src/components/Soilder/Soilder.css
+++ b/src/components/Soilder/Soilder.css
@@ -3,7 +3,7 @@
   border-radius: 20px;
   justify-content: center;
 }
-.soilder h4 {
+.soilder h3 {
   margin-left: 40px;
 }
 .soilder button {
@@ -13,6 +13,8 @@
   width: 200px;
   border-radius: 10px;
   font-size: 20px;
+  background-color: rgb(245, 134, 55);
+  border: 1px solid white;
 }
 .soilder img {
   height: 400px;
